--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body style="background-image: url(Imagenes/FondoCumple.jpg);">
     <div class="container text-center mt-5">
         <!-- Etiqueta de título -->
-        <h1 id="titulo" style="color: blue; font-family:Georgia, 'Times New Roman', Times, serif;">Tocca questa torta</h1>
+        <h1 id="titulo" style=" margin-right:50%; color: black; font-weight: bolder ;font-family:Georgia, 'Times New Roman', Times, serif;">Tocca questa torta</h1>
 
         <!-- Botón de imagen -->
         <button onclick="mostrarMensaje()" style="border: none; background: transparent; cursor: pointer;">
