--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         function mostrarMensaje() {
             document.getElementById('lblCompleanno').style.display = 'block';
             document.getElementById('titulo').style.display = 'none';
+            document.getElementById('LogoPortofranco').style.display = 'block';
             cambiarColor(); // Iniciar cambio de color
         }
     </script>
@@ -38,7 +39,8 @@
         </button>
 
         <!-- Mensaje de cumpleaños (inicialmente oculto) -->
-        <h2 id="lblCompleanno" style="display: none;">Buon Compleanno <br> Alessandra :)</h2>
+        <h2 id="lblCompleanno" style="display: none;">Buon Compleanno <br> Enrica :)</h2>
+        <img id="LogoPortofranco" src="Imagenes/LogoEnricaCompleanno.png" alt="" style="max-width: 100%; height: 100px;display: none; margin-left:35%; margin-top:1%;">
     </div>
 </body>
 </html>
