--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <!-- Botón de imagen -->
         <button onclick="mostrarMensaje()" style="border: none; background: transparent; cursor: pointer;">
-            <img src="Imagenes/TortaCumpleaños.png" alt="Torta di Compleanno" style="max-width: 100%; height: 300px;">
+            <img src="Imagenes/TortaRosa.png" alt="Torta di Compleanno" style="max-width: 100%; height: 300px;">
         </button>
 
         <!-- Mensaje de cumpleaños (inicialmente oculto) -->
